--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/climber_gear?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=mynewpassword
+spring.datasource.password=
 
 spring.jpa.properties.hibernates.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
